--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,8 @@
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
+  --transition: all 0.3s ease;
+  --shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
 }
 
 @media (prefers-color-scheme: dark) {
@@ -18,21 +20,22 @@
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
+  background: linear-gradient(to bottom,
       transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+      rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb));
+  font-size: 16px;
+  line-height: 1.5;
 }
 
-.slick-dots li
-{
+.slick-dots li {
   margin: 0 0px !important;
+  transition: var(--transition);
+  box-shadow: var(--shadow);
 }
 
-.slick-slide img
-{
-    margin-left: auto;
-    margin-right: auto;
+.slick-slide img {
+  margin-left: auto;
+  margin-right: auto;
+  box-shadow: var(--shadow);
+  transition: var(--transition);
 }
